crates/ask_pete_researcher/check_output_3.txt
warning: unused import: `once_cell::sync::Lazy`
 --> common\src\lib.rs:8:5
  |
8 | use once_cell::sync::Lazy;
  |     ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `common` (lib) generated 1 warning (run `cargo fix --lib -p common` to apply 1 suggestion)
    Checking frontend v0.1.0 (C:\Users\Trinity\Documents\daydream\Day_Dream\frontend)
error[E0382]: use of moved value: `path_d`
   --> frontend\src\components\authoring\node_canvas.rs:224:41
    |
209 |                           let path_d = format!(
    |                               ------ move occurs because `path_d` has type `std::string::String`, which does not implement the `Copy` trait
...
214 | /                         view! {
215 | |                             <g>
216 | |                                 // Track Bed (Thick Dark Line)
217 | |                                 <path d=path_d.clone() stroke="#1a1a2e" stroke-width="12" fill="none" />
...   |
224 | |                                 <path d=path_d stroke="transparent" stroke-width="1" fill="none" marker-end="url(#arrowhead)" />
    | |                                         ^^^^^^ value used here after move
225 | |                             </g>
226 | |                         }
    | |_________________________- `path_d` moved due to this method call
    |
note: `into_attribute_value` takes ownership of the receiver `self`, which moves `path_d`
   --> C:\Users\Trinity\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tachys-0.2.11\src\html\attribute\value.rs:20:29
    |
 20 |     fn into_attribute_value(self) -> Self::Output;
    |                             ^^^^
help: you can `clone` the value and consume it, but this might not be your desired behavior
    |
222 |                                 <path d=path_d.clone() stroke="#1a1a2e" stroke-width="2" fill="none" />
    |                                               ++++++++

For more information about this error, try `rustc --explain E0382`.
error: could not compile `frontend` (lib) due to 1 previous error
